--- a/style.css
+++ b/style.css
@@ -68,6 +68,19 @@ table {
 /*fonts*/
 
 @font-face {
+    font-family: 'karbonmedium';
+    src: url('fonts/karbon/karbon-medium-webfont.eot');
+    src: url('fonts/karbon/karbon-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/karbon/karbon-medium-webfont.woff') format('woff'),
+         url('fonts/karbon/karbon-medium-webfont.ttf') format('truetype'),
+         url('fonts/karbon/karbon-medium-webfont.svg#karbonmedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    letter-spacing: 1px;
+}
+
+
+@font-face {
     font-family: 'langdon';
     src: url('fonts/langdon-webfont.eot');
     src: url('fonts/langdon-webfont.eot?#iefix') format('embedded-opentype'),
@@ -275,9 +288,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4fd2e8', end
 #products{
 	clear:both;
 	background: url(img/subtle_grunge.png) 0 0 repeat; 
-	padding-bottom: 40px; 
+	padding: 40px 0px 40px 0px;
 }
 
+button.product#supergrip img{
+	-moz-box-shadow: 0 0 2px 4px #ccc;
+-webkit-box-shadow: 0 0 2px 4px#ccc;
+box-shadow: 0 0 2px 4px #ccc;
+}
 
 button.product{
 	text-decoration: none;
@@ -321,7 +339,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 
 #productlist{
-		padding-top: 40px;
+		padding-top:20px;
 }
 .title{
 	display: block;
@@ -422,7 +440,36 @@ color: #777777;
 }
 
 footer{
-	text-align: center;
 	color: #FFFFFF;
-	padding: 20px;
+	padding: 20px 0px 60px 0px;
+	font-family: karbonmedium;
+	letter-spacing: 0px;
+	line-height: 20px;
+	opacity: .7;
+}
+.column{
+	float:left;
+	width: 33.3%;	
+}
+
+#column1, #column3{
+	padding-top: 20px;
+	font-family: nexalight;
+	font-weight: 100;
+	font-size: 14px;
+}
+#column2{
+	text-align: center;
+	padding-top: 30px;
+}
+
+#column1 p{
+	margin-bottom:20px;
+}
+#column3{
+	text-align: left;
+}
+#column3 a{
+	display:block;
+	padding: 20px 0px 20px 0px;
 }
