--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -64,7 +64,9 @@ table {
 .clearfix {
 	display: block;
 }
-
+.productdetails {
+	display: none;
+}
 /*fonts*/
 
 @font-face {
@@ -151,7 +153,7 @@ nav{
 	margin-top: 61px;
 	padding: 5px 0px 4px 0px;
 	z-index: 99999;
-	-webkit-box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4); 
+	-webkit-box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4);
     box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4);
 }
 
@@ -188,7 +190,7 @@ nav ul li{
 }
 
 .wrap{
-	max-width: 980px;	
+	max-width: 980px;
 	margin: 0 auto;
 }
 
@@ -228,7 +230,7 @@ h1, a.size{
 }
 #top{
 	margin-top: 50px;
-	padding-bottom: 80px;	
+	padding-bottom: 80px;
 }
 .divider{
 	height: 100px;
@@ -245,7 +247,7 @@ h1, a.size{
 #matrix{
 	width: 50%;
 	display:inline-block;
-	padding-top: 93px;	
+	padding-top: 93px;
 }
 .category{
 	margin-top: 10px;
@@ -289,7 +291,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4fd2e8', end
 
 #products{
 	clear:both;
-	background: url(img/subtle_grunge.png) 0 0 repeat; 
+	background: url(img/subtle_grunge.png) 0 0 repeat;
 	padding: 20px 0px 40px 0px;
 }
 
@@ -355,21 +357,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	background: #FFFFFF;
 	outline: #cccccc solid thin;
 	margin-top: 10px;
-	-webkit-box-shadow: inset 1px 1px 3px 1px rgba(1, 1, 1, .4); 
+	-webkit-box-shadow: inset 1px 1px 3px 1px rgba(1, 1, 1, .4);
         box-shadow: inset 1px 1px 3px 1px rgba(1, 1, 1, .4);
         padding: 40px 0px 40px 0px;
 }
 
 .arrow-up {
-	width: 0; 
-	height: 0; 
+	width: 0;
+	height: 0;
 	border-left: 30px solid transparent;
 	border-right: 30px solid transparent;
 	border-bottom: 30px solid white;
-	position: relative;
-	top: -48px;
+	position: absolute;
+	top: -0;
 	z-index: 999;
-	left: 172px;
+	left: 0;
 }
 
 #left{
@@ -448,7 +450,7 @@ footer{
 }
 .column{
 	float:left;
-	width: 33.3%;	
+	width: 33.3%;
 }
 
 #column1, #column3{
