--- a/style.css
+++ b/style.css
@@ -156,7 +156,10 @@ nav{
 	-webkit-box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4);
     box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4);
 }
-
+.details{
+	display: none;
+	position: relative;
+}
 nav a{
 	font-family: nexalight;
 	font-size: 16px;
