--- a/style.css
+++ b/style.css
@@ -124,12 +124,30 @@ table {
 
 }
 
+@font-face {
+    font-family: 'karbonlight';
+    src: url('fonts/karbon-light-webfont.eot');
+    src: url('fonts/karbon-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/karbon-light-webfont.woff') format('woff'),
+         url('fonts/karbon-light-webfont.ttf') format('truetype'),
+         url('fonts/karbon-light-webfont.svg#karbon-light-webfont') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 
 body{
 	background: #fff url(img/mochaGrunge.jpg) 0 0;
-	font-family: nexalight;
+	font-family: karbonlight;
 	letter-spacing: 2px;
 }
+
+section{
+	height: 100%;
+}
+
 a{
 	text-decoration:none;
 }
@@ -141,34 +159,31 @@ a:hover{
 	margin: 0 auto;
 }
 header{
-		background: url(img/mochaGrunge.jpg) 0 0;
-	position: fixed;
+	background: url(img/mochaGrunge.jpg) 0 0;
 	width: 100%;
-	z-index: 99999;
 }
 nav{
 	background: #000000 url(img/subtle_grunge.png) center center;
 	text-align: center;
-	height: 21px;
-	margin-top: 61px;
+	height: 20px;
 	padding: 5px 0px 4px 0px;
-	z-index: 99999;
-	-webkit-box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4);
-    box-shadow:  1px 1px 1px 1px rgba(1, 1, 1, .4);
+	position: relative;
+	margin-top: 15px;
 }
 .details{
 	display: none;
 	position: relative;
 }
 nav a{
-	font-family: nexalight;
+	font-family: karbonlight;
 	font-size: 16px;
 	text-decoration: none;
 	color: #333333;
-	padding: 5px 20px 5px 20px;
+	padding: 6px 20px 6px 20px;
 	position: relative;
 	z-index: 9999;
 	letter-spacing: 2px;
+	top: 1px;
 }
 
 nav img{
@@ -177,9 +192,6 @@ max-width: 80px;
 
 nav a:hover{
 	background: url(img/subtle_grunge_blue.png) 0 0;
-}
-nav ul{
-	margin-top: -26px;
 }
 nav ul li{
 	display:inline;
@@ -232,18 +244,38 @@ h1, a.size{
 	opacity: .7;
 }
 #top{
-	margin-top: 50px;
 	padding-bottom: 80px;
+	padding-top: 60px;
 }
+
+
+#logobox{
+	width: 400px;
+	margin: 0 auto;
+	padding-top: 10px;
+	text-align: center;
+	z-index: 100000;
+}
+#logo{
+	display: inline-block;
+}
+
+#tagline{
+	display:block;
+	font-size: 14px;
+	text-align: center;
+}
+
 .divider{
 	height: 100px;
 }
 #instructions p{
-	font-family: nexalight;
+	font-family: karbonlight;
 	letter-spacing: 0px;
 	text-align: justify;
-	line-height: 18px;
+	line-height: 22px;
 	color: #ffffff;
+	font-size: 20px;
 	opacity: .7;
 }
 
@@ -251,6 +283,7 @@ h1, a.size{
 	width: 50%;
 	display:inline-block;
 	padding-top: 93px;
+	position: relative;
 }
 .category{
 	margin-top: 10px;
@@ -277,14 +310,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4fd2e8', end
 .option1{
 	color: #4fd2e8;
 	display:inline;
-	font-size: 10px;
+	font-size: 12px;
 }
 .option2{
 	color: #ffffff;
 		display:inline;
 		text-align: right;
 		float:right;
-		font-size: 10px;
+		font-size: 12px;
 		margin-top:5px;
 }
 
@@ -348,12 +381,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	display: block;
 	text-align:center;
 	text-decoration: none;
-	font-size: 12px;
+	font-size: 14px;
 	letter-spacing: 1px;
 	font-family: langdon;
 	margin: 0 auto;
 	max-width: 70px;
 	margin-bottom: 7px;
+	text-transform: uppercase;
 }
 
 .detailsInner{
@@ -384,6 +418,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 
 #left h1{
 	color: #000000;
+		text-transform: uppercase;
 }
 #right{
 	float:left;
@@ -391,7 +426,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 
 #left .inner p{
-	font-family: nexalight;
+	font-family: karbonlight;
 	letter-spacing: 0px;
 	text-align: justify;
 	line-height: 20px;
@@ -421,7 +456,7 @@ a.size{
 }
 a.expert{
 	display:inline-block;
-	font-family: nexalight;
+	font-family: karbonlight;
 	letter-spacing: 0px;
 	text-align: justify;
 	line-height: 20px;
@@ -450,6 +485,7 @@ footer{
 	letter-spacing: 0px;
 	line-height: 20px;
 	opacity: .7;
+	clear:both;
 }
 .column{
 	float:left;
@@ -458,9 +494,9 @@ footer{
 
 #column1, #column3{
 	padding-top: 16px;
-	font-family: nexalight;
+	font-family: karbonlight;
 	font-weight: 100;
-	font-size: 14px;
+	font-size: 16px;
 }
 .column a{
 	color: #FFFFFF;
@@ -488,4 +524,65 @@ footer{
 #column3 a{
 	display:block;
 	padding: 20px 0px 20px 0px;
+}
+
+h1#myModalLabel{
+	color: #333333;
+	font-size: 50px;
+	padding-top: 20px;
+	padding-bottom: 0px;
+}
+
+.modal-body{
+	padding: 20px 40px 0px 40px;
+}
+.modal-header{
+text-align: center;
+}
+form label{
+	font-family: langdon;
+	text-transform: uppercase;
+}
+
+form input{
+	width: 97%;
+}
+form textarea{
+	width: 97%;
+}
+#submit{
+	background: #222222;
+	float:right;
+	box-shadow: none;
+	border: none;
+	font-family: langdon;
+	font-size: 30px;
+	color: #4fd2e8;
+	padding: 10px;
+}
+
+sup{
+	font-size: 15px;
+	position: relative;
+	top: -40px;
+}
+a.ctabox{
+	color: #FFFFFF;
+	background: #3daed6;
+	display: inline-block;
+	padding: 10px;
+	font-family: langdon;
+	letter-spacing: 1px;
+	margin-top: 50px;
+	-webkit-transition: color .3s ease-in-out;
+	-moz-transition: color .3s ease-in-out;
+	-o-transition: color .3s ease-in-out;
+	-ms-transition: color .3s ease-in-out;
+}
+a.ctabox:hover{
+	color: #333333;
+}
+
+#matrix img#featuredshoe{
+	z-index: 1;
 }
