--- a/home.css
+++ b/home.css
@@ -42,6 +42,8 @@ h1, a.size{
 }
 #instructions p{
 	color: #222222;
+	font-size: 16px;
+	line-height: 18px;
 }
 #instructions .inner{
 	padding: 0px;
@@ -54,9 +56,7 @@ footer{
 #matrix{
 	max-width: 40%;
 	float:right;
-	padding-top: 0px;
-		padding-bottom: 60px;
-	padding-right: 7%;
+	padding: 0px 7% 60px 0px;
 	background-image: linear-gradient(right , rgb(187,190,195) 6%, rgb(244,244,244) 35%);
 background-image: -o-linear-gradient(right , rgb(187,190,195) 6%, rgb(244,244,244) 35%);
 background-image: -moz-linear-gradient(right , rgb(187,190,195) 6%, rgb(244,244,244) 35%);
@@ -70,6 +70,11 @@ background-image: -webkit-gradient(
 	color-stop(0.06, rgb(187,190,195)),
 	color-stop(0.35, rgb(244,244,244))
 );
+}
+
+#matrix img#featuredshoe{
+	z-index: 1;
+	width: 100%;
 }
 
 #stageone{
@@ -122,6 +127,7 @@ article#three #words{
 	font-size: 60px;
 	text-align: center;
 	display:inline;
+	color:#4fd2e8;
 }
 
 .description{
@@ -132,12 +138,17 @@ article#three #words{
 }
 
 .blueline{
-	background: #333333;
+	background: #999999;
 	height: 1px;
 	width: 70%;
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
+}
+
+.blueline img{
+	position: relative;
+	top: -18px;
 }
 
 #removable{
