--- a/style.css
+++ b/style.css
@@ -157,10 +157,7 @@ a:hover{
 	-ms-transition: color .3s ease-in-out;
 	transition: color .3s ease-in-out;
 }
-.content{
-	width: 980px;
-	margin: 0 auto;
-}
+
 header{
 	background: url(img/mochaGrunge.jpg) 0 0;
 	width: 100%;
@@ -214,7 +211,13 @@ nav ul li{
 .wrap{
 	width: 980px;
 	margin: 0 auto;
-	padding: 0px 10px 0px 10px;
+	padding: 0px 10px 0px 10px;	
+}
+.content{
+	width: 980px;
+	margin: 0 auto;
+
+	
 }
 .winter{
 	font-family: nexabold;
@@ -704,6 +707,7 @@ a.ctabox:hover{
 }
 #facts a.speak{
 	display:inline;
+	line-height: 25px;
 }
 #facts a:hover{
 	color: #777777;
