--- a/style.css
+++ b/style.css
@@ -143,6 +143,17 @@ table {
 
 }
 
+@font-face {
+    font-family: 'karbonsemibold';
+    src: url('fonts/karbon-semibold-webfont.eot');
+    src: url('fonts/karbon-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/karbon-semibold-webfont.woff') format('woff'),
+         url('fonts/karbon-semibold-webfont.ttf') format('truetype'),
+         url('fonts/karbon-semibold-webfont.svg#karbon-semibold-webfont') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 
 body{
@@ -208,6 +219,58 @@ nav{
 	display: none;
 	position: relative;
 	background-color: #FFFFFF;
+	border-top:solid 12px lightgray;
+	border-bottom:solid 12px lightgray;
+}
+.cta-details-blue a{
+	color:#46bfdf;
+	font-size: 1.5em;
+	font-family: langdon;
+	text-transform: uppercase;
+	line-height: 1.15em;
+}
+.cta-details-blue {
+	margin-bottom: 20px;
+}
+.features, .ideal, .sizechart, .views {
+	color:rgba(0,0,0,0.7);
+	font-size: 1.4em;
+	font-family: langdon;
+	text-transform: uppercase;
+	margin-right: 20px;
+}
+.details-moreinfo {
+	margin-top:40px;
+}
+.moreinfo-section {
+	margin-top: 20px;
+	/*min-height: 298px;*/
+}
+.ideal-info table {
+    table-layout:fixed;
+    width:100%;
+}
+.ideal-info table, .ideal-info th, .ideal-info td
+{
+border: 1px solid black;
+}
+.ideal-info td
+{
+padding:5px 50pc 5px 5px;
+}
+/*.ideal-info, .sizechart-info, .views-info, .features-info{
+
+}*/
+.features-info ul{
+	list-style-type: disc;
+	margin-left: 15px;
+	line-height: 1.4em;
+	color:#46bfdf;
+	font-family: karbonsemibold;
+	letter-spacing: 0px;
+}
+.ideal-info, .sizechart-info, .views-info{
+	display: none;
 }
 nav a{
 	font-family: nexabold;
@@ -279,6 +342,14 @@ h1, a.size{
 	font-family: langdon;
 	letter-spacing: -1px;
 	font-size: 80px;
+	padding-bottom: 30px;
+	color: #ffffff;
+	opacity: .7;
+}
+h2, a.size{
+	font-family: langdon;
+	letter-spacing: 1px;
+	font-size: 24px;
 	padding-bottom: 30px;
 	color: #ffffff;
 	opacity: .7;
@@ -433,11 +504,25 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	text-transform: uppercase;
 }
 
+.sub-title{
+	display: block;
+	text-align:center;
+	text-decoration: none;
+	font-size: 12px;
+	color:#333333;
+	letter-spacing: 1px;
+	font-family: karbonlight;
+	margin: 0 auto;
+	max-width: 70px;
+	margin-bottom: 7px;
+	text-transform: uppercase;
+}
+
 .detailsInner{
 	background: none;
 	/*margin-top: 10px;*/
     /*padding: 40px 40px 40px 40px;*/
-    padding: 40px 0px;
+    padding: 40px 0px 60px 0px;
     margin: 0 auto;
 }
 
@@ -459,9 +544,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	width: 50%;
 }
 
-#left h1{
+#left h1, #left h2{
 	color: #000000;
-		text-transform: uppercase;
+	text-transform: uppercase;
 }
 #right{
 	float:left;
@@ -768,6 +853,7 @@ margin-left: 30px;
 }
 
 #patent #right img{
-	padding-left: 100px;
+	/*padding-left: 100px;*/
+	float: right;
 }
 
