--- a/style.css
+++ b/style.css
@@ -950,6 +950,9 @@ h1, a.size{
 }
 }
 @media only screen and (max-width: 700px){
+	.hide2{
+		display:none;
+	}
 .winter.see{
 	clear:both;
 	margin-top: 60px;
@@ -1009,11 +1012,11 @@ nav a{
 @media only screen and (max-width: 400px){
 nav a{
 	font-family: nexalight;
-	font-size: 8px;
+	font-size: 12px;
 	font-weight: 100;
 	text-decoration: none;
 	color: #333333;
-	padding: 6px 4px 6px 4px;
+	padding: 6px 10px 6px 10px;
 	position: relative;
 	z-index: 9999;
 	letter-spacing: 2px;
