--- a/home.css
+++ b/home.css
@@ -199,6 +199,9 @@ img.shoez{
 img.words{
 	display:none;
 }
+a.view{
+	display:none;
+}
 }
 @media only screen and (max-width: 700px) {
 #home #instructions{
@@ -267,10 +270,10 @@ a.ctabox{
 	-o-transition: color .3s ease-in-out;
 	-ms-transition: color .3s ease-in-out;
 }
-a.view{
+a.ctabox.view{
 	display:none;
 }
 a.learn{
-	display:block;
+	display:inline-block;
 }
 }
